// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HotelSwipeItem renders "no reviews" when no reviews are available 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      Object {
        "width": 250,
      },
    ]
  }
>
  <View>
    <NetworkImage
      resizeMode="contain"
      source={
        Object {
          "uri": "http://example.com/image.jpg",
        }
      }
      style={
        Object {
          "borderRadius": 3,
          "height": 60,
          "marginRight": 10,
          "width": 60,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
        "marginVertical": 3,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      Hotel v Olomouci
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#616161",
          "fontSize": 12,
          "opacity": 0.8,
        }
      }
    >
      No reviews
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#0097a9",
          "fontSize": 12,
          "fontWeight": "bold",
        }
      }
    >
      <Price
        amount={140}
        currency="EUR"
      />
    </Text>
  </View>
</View>
`;

exports[`HotelSwipeItem renders review 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      Object {
        "width": 250,
      },
    ]
  }
>
  <View>
    <NetworkImage
      resizeMode="contain"
      source={
        Object {
          "uri": "http://example.com/image.jpg",
        }
      }
      style={
        Object {
          "borderRadius": 3,
          "height": 60,
          "marginRight": 10,
          "width": 60,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
        "marginVertical": 3,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      Hotel v Olomouci
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#616161",
          "fontSize": 12,
          "opacity": 0.8,
        }
      }
    >
      8
       
      Very Good
       · 
      2
       
      reviews
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#0097a9",
          "fontSize": 12,
          "fontWeight": "bold",
        }
      }
    >
      <Price
        amount={140}
        currency="EUR"
      />
    </Text>
  </View>
</View>
`;
